--- a/index.css
+++ b/index.css
@@ -106,6 +106,7 @@ main img{
 }
 .wrap5{
     grid-area: 3/1/3/1;
+    display: flex;
 }
 .wrap5 img{
     position: absolute;
@@ -114,25 +115,22 @@ main img{
 }
 .wrap6{
     grid-area:3/2/3/2 ;
+    display: flex;
 }
 .wrap6 img{
     position: absolute;
     z-index: -1;
     vertical-align: middle;
 }
-@media (min-width: 769px){
-    .wrap5 .txt{
-        text-align: center;
-        padding: 0rem 5rem;
-        position: relative;
-        top: 50vh;
-    }
-    .wrap6 .txt{
-        text-align: center;
-        padding: 0rem 5rem;
-        position: relative;
-        top: 50vh;
-    }
+.wrap5 .txt{
+    text-align: center;
+    padding: 2rem 5rem;
+    align-self: flex-end;
+}
+.wrap6 .txt{
+    text-align: center;
+    padding: 2rem 5rem;
+    align-self: flex-end;
 }
 /* *SECTION Testimonials*/
 .CT{
@@ -197,7 +195,11 @@ main img{
 }
 /* *Mobile */
 @media (max-width : 768px){
-    body{
+    /* *General */
+    img{
+        max-width: 100%;
+    }
+    .contain{
         display: flex;
         flex-direction: column;
     }
@@ -209,37 +211,25 @@ main img{
         margin-top: .2rem;
         margin-right: 3rem;
     }
+    /* *MAIN */
     main .title{
         left: 2rem;
         text-align: center;
-
     }
+    /* *Wrap */
     .wrapper{
         display: flex;
         flex-direction: column;
     }
     .wrap1,.wrap4{
-        padding: 3rem;
+        padding: 6rem 3rem;
         text-align: center;
     }
-    .wrapper img{
-        position: relative;
-        max-width: 100%;
+    .wrap6{
+        max-width: fit-content;
     }
-    .wrap5 .txt{
-        text-align: center;
-        padding: 0rem 5rem;
-        position: absolute;
-        top: 170rem;
-    }
-    .wrap6 .txt{
-        text-align: center;
-        padding: 0rem 5rem;
-        position: absolute;
-        top: 223rem;
-    }
+    /* *Testimonials */
     .testimonial{
-        display: flex;
         flex-direction: column;
     }
     .img-row{
