--- a/index.css
+++ b/index.css
@@ -97,41 +97,40 @@ main img{
     vertical-align: middle;
 }
 /* *WRAPPER 2 by 3*/
-.wrapper{/* !not responsive*/
+.wrapper{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
 }
 .wrapper p{
     line-height: 1.6;
 }
 .wrap1{
-    grid-area: 1/1/1/1 ;
+    grid-area: 1/1/1/1;
     justify-self: center;
     align-self: center;
-    padding: 5rem;
+    padding: 4rem;
 }
 .wrap2 img{
-    grid-area:1/2/1/2 ;
     vertical-align: middle;
+    max-width: 100%;
 }
 .wrap3 img{
-    grid-area:2/1/2/1 ;
     vertical-align: middle;
+    max-width: 100%;
 }
 .wrap4{
-    grid-area:2/2/2/2 ;
     justify-self: center;
     align-self: center;
-    padding: 5rem;
+    padding: 4rem;
 }
 .wrap5{
     position: relative;
-    grid-area: 3/1/3/1;
     display: flex;
 }
 .wrap5 img{
     vertical-align: middle;
+    max-width: 100%;
 }
 .wrap5 .txt{
     position: absolute;
@@ -143,11 +142,11 @@ main img{
 }
 .wrap6{
     position: relative;
-    grid-area:3/2/3/2 ;
     display: flex;
 }
 .wrap6 img{
     vertical-align: middle;
+    max-width: 100%;
 }
 .wrap6 .txt{
     position: absolute;
